--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "vitepress-project",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vitepress dev docs",
-    "build": "vitepress build docs",
-    "serve": "vitepress serve docs"
-  },
   "devDependencies": {
-    "vue": "3.2.44",
-    "vitepress": "1.0.0-alpha.28"
+    "@types/bun": "latest",
+    "vitepress": "^1.3.1"
   },
-  "pnpm": {
-    "peerDependencyRules": {
-      "ignoreMissing": [
-        "@algolia/client-search"
-      ]
-    }
+  "scripts": {
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
+  },
+  "dependencies": {
+    "flexsearch": "^0.7.31",
+    "@vue-pdf-viewer/viewer": "^1.0.2",
+    "vue": "^3.4.33"
   }
 }
